# RustFaustExperiments

./: README.md  binary_info.md  gen_summary_table.py  rerun_all.sh
Benchmarks/: README.md  gen_summary_table.py  regression_notes.md
Benchmarks/cpp/: console-bench.cpp  gen_and_run.sh  gen_and_run_all.sh
Benchmarks/dsp/: delay.dsp
Benchmarks/minimal_reproducible_example/: Cargo.toml
Benchmarks/rust/: .gitignore  Cargo.toml  faust_debug_dsp.sh  gen_and_run.sh  gen_and_run_all.sh  notes.md
cpp/: console-bench.cpp  gen_and_run.sh  gen_and_run_all.sh
cpp/src/: copy1.cpp  copy2.cpp  delay.cpp  karplus32.cpp  math.cpp  osci.cpp  reverb.cpp
dsp/: osci.dsp
minimal_reproducible_example/src/: main.rs
results/copy1/: cpp_fastmath.json  cpp_no_fastmath.json  rust.json  rust_1_66_0.json  rust_1_67_0.json  rust_binary_info.json
results/copy2/: cpp_fastmath.json  cpp_no_fastmath.json  rust.json  rust_1_66_0.json  rust_1_67_0.json  rust_binary_info.json
results/delay/: cpp_fastmath.json  cpp_no_fastmath.json  rust.json  rust_1_67_0.json  rust_binary_info.json
results/karplus32/: cpp_fastmath.json  cpp_no_fastmath.json  rust.json  rust_binary_info.json
results/math/: cpp_fastmath.json  cpp_no_fastmath.json  rust.json  rust_binary_info.json
results/osci/: cpp_fastmath.json  cpp_no_fastmath.json  rust.json  rust_binary_info.json
results/reverb/: cpp_fastmath.json  cpp_no_fastmath.json  (+3 more)
rust/: .gitignore  Cargo.toml  diff_asm.sh  gen_and_run.sh  gen_and_run_all.sh  notes.md
rust/architecture/: benchmark.rs
rust/src/: benchmark_runner.rs  lib.rs  types.rs
(+42 files in other folders)
