[package]
name = "faust_benchmarks"
version = "0.1.0"
authors = ["Fabian Keller <github.100.fkeller@spamgourmet.com>"]
edition = "2024"

[dependencies]

# None needed

[profile.release]

# It's recommended to set codegen units to 1 for benchmarking and reproducible builds.
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units

codegen-units = 1

# The default release profile only strips "debuginfo", but for reproducible builds it
# makes sense to go for full symbol stripping.
strip = "symbols"
